Fix project structure